turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: not found: value n
	if(n < taille - 1){
           ^LangtonsAnt:14: error: not found: value n
		setCouleurSol(colors(n + 1));	
                                     ^LangtonsAnt:17: error: not found: value color
		setCouleurSol(color(0));
                              ^LangtonsAnt:20: error: not found: value n
	if(rule(n) == "R"){
                ^