turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	var taille: Int = rule.length;
	var position: Int = 0;
	var couleurSol: Color = getCouleurSol();

	for(i <- 0 to taille -1){
		if(colors(i) == couleurSol){
			position = i;
		}
	}
		
	if(n < taille - 1){
		setCouleurSol(colors(n + 1));	
	}
	else{
		setCouleurSol(color(0));
	}

	if(rule(n) == "R"){
		droite();
		avance();
	}
	else{
		gauche();
		avance();
	}
	
}

def setCouleurSol(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
}
